--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
   "author": "Vladislav Velikoivanenko <stellarlay@yandex.ru>",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "bcrypt": "^5.1.0",
     "config": "^3.3.9",
+    "cross-env": "^7.0.3",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.0"
   },
   "devDependencies": {
